--- a/src/components/home/cards/card.scss
+++ b/src/components/home/cards/card.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
- 
+
   padding-bottom: 20px;
   span{
     font-size: 1.2rem;
@@ -21,15 +21,62 @@
 }
 
 .content{
+
+  &-NewYorkTimes,&-BBC,&-Gurdian,&-CNN{
+    padding: 0 5%;
+    margin-bottom: 5%;
+
+  }
+  &-NewYorkTimes{
+    margin-top: 4%;
+    background-color: #1b2845;
+    background-image: linear-gradient(315deg, #1b2845 0%, #2c486d 74%);
+    padding-bottom: 5%;
+    color: #ccc;
+  }
+
+  &-BBC{
+    background: rgb(83,12,14);
+    background: linear-gradient(333deg, rgba(83,12,14,1) 11%, rgba(219,13,49,1) 100%);
+    padding-bottom: 5%;
+    color: #ccc;
+  }
+
+  &-Gurdian{
+    background: #1e3c72; 
+    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72); 
+    background: linear-gradient(to right, #2a5298, #1e3c72);
+    padding-bottom: 5%;
+    color: #ccc;
+
+  }
+  &-CNN{
+    background-color: #485461;
+    background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+    padding-bottom: 5%;
+    color: #ccc;
+  }
+
   &-view{
     &-card{
+     
       &-text{
+        &-more{
+          border-top: 1px solid rgb(23, 133, 207);
+          padding-top: 15px;
+        }
+        &-less{
+          border-bottom: 1px solid rgb(23, 133, 207);
+          padding-bottom: 15px;
+        }
+        
         margin: 10px 0px;
-        position: absolute;
-        width: 95%;
-        text-align: center;
-        margin-top: 30px;
-        color:rgb(97, 97, 97);
+        // position: absolute;
+        width: 97%;
+        text-align: right;
+        margin: 50px 0px;
+
+        color:#ccc;
         cursor: pointer;
       }
       &-news{
@@ -197,6 +244,11 @@
    
     width: inherit;
     &-1{
+      // @media(min-width: 1200px) {
+      //   border-right: 2px solid black;
+      // }
+      
+      // padding-right: 10px;
       &-cnn{
         a{
           h4{
@@ -206,7 +258,7 @@
         }
       }
       display: grid;
-      row-gap: 5%;
+      row-gap: 2%;
       @media(max-width: 970px){
         row-gap: 1%;
       }
@@ -218,14 +270,21 @@
       }
       &-hero{
         position: relative;
+        // @media(min-width: 1200px) {
+        // border-bottom: 2px solid black;
+        // padding-bottom: 10px;
+        // }
+       
         &-container{
           display: flex;
           justify-content: space-between;
+          
           @media(max-width: 700px){
             flex-direction: column-reverse;
             font-size: 1.3rem;
           
           &-text{
+        
             &-anchor{
               position: absolute;
               top: 0px;
@@ -246,6 +305,13 @@
               }
             // padding-bottom: 10px;
           }
+          }
+          
+        
+        }
+        &-text{
+          &-anchor{
+            padding-bottom: 10px;
           }
           
         }
@@ -269,7 +335,7 @@
       &-content{
         display: grid;
         grid-template-columns: repeat(3,1fr);
-        column-gap: 2%;
+        column-gap: 1%;
         @media(max-width: 700px){
           grid-template-columns: repeat(2,1fr);
         }
@@ -355,9 +421,22 @@
        
        }
     }
+
+
+    // &-2{
+    //   @media(min-width: 1200px) {
+    //     border-right: 2px solid black;
+    //     padding-right: 10px;
+    //     margin-left: 10px;
+    //   }
+    // }
     &-3{
+    
       width: inherit;
       display: grid;
+      // @media(min-width: 1200px) {
+      //  padding-left: 10px;
+      // }
       @media(max-width: 700px) {
       &-peragraph{
         a{
@@ -381,6 +460,7 @@
         }
        
         ul{
+          
           display: grid;
           grid-template-columns: repeat(4,1fr);
           @media(max-width: 700px){
