--- a/src/components/home/footer/footer.scss
+++ b/src/components/home/footer/footer.scss
@@ -1,11 +1,12 @@
 .footer{
     width: 101%;
     margin-top: 20px;
-    // padding: 0px 20px;
+    color: #ccc;
+    padding: 0px 5%;
     border-top:  2px solid black;
     padding-top: 40px;
-    
-    // height: 30vh;
+    background-color: #000000;
+    background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -80,12 +81,12 @@
             padding-top: 10px;
         }
         ul{
-            @media(max-width: 800px){
+            
                 display: flex;
-                // align-items: center;
-                justify-content: center;
+                
+                justify-content: space-between;
                 // width: 50%;
-            }
+            
             list-style: none;
             li{
                 @media(max-width: 800px){
