--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -61,7 +61,7 @@
     }
 
     &-links{
-      padding: 0 5%;
+      padding: 0 2%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -115,7 +115,8 @@
       transition: all 0.5s ease-out;
       margin: 0 5%;
       &-scrolled{
-        margin: 0;
+      box-shadow: 0 15px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      margin: 0;
       transition: all 0.5s ease-out;
       position: fixed;
       top: 0;
@@ -147,7 +148,7 @@
         }
       }
       span{
-        transition: all 0.1s ease-in;
+        transition: all 0.5s ease-in;
         cursor: pointer;
         // color: rgb(77, 77, 77);
         // font-size: 1.1rem;
