--- a/src/components/Modals/Signin/Signin.scss
+++ b/src/components/Modals/Signin/Signin.scss
@@ -6,7 +6,14 @@
     position: relative;
     z-index: 800;
 }
+
+@keyframes popup {
+    0%   {transform: scale(0.5);}
+    100% {transform: scale(1);}
+  }
 .modal{
+    z-index: 9999;
+    animation: popup 0.5s alternate ease-in;
     width: 100%;
     height: 100%;
     display: flex;
