--- a/src/index.scss
+++ b/src/index.scss
@@ -88,6 +88,7 @@ html,body {
   font-family: 'Nunito Sans', sans-serif;
 }
 html,body{
+  overflow: overlay;
   overflow-x: hidden;
   background-color: rgb(255, 255, 255);
   @media (max-width: 1400px){
@@ -102,3 +103,16 @@ html,body{
 
 
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: rgba(177, 177, 177, 0.849);
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+}
