--- a/src/components/Modals/Signin/Signin.scss
+++ b/src/components/Modals/Signin/Signin.scss
@@ -112,6 +112,7 @@
             &-button{
                 
                 button{
+                 
                     cursor: pointer;
                     font-size: 1.2rem;
                     display: flex;
@@ -125,6 +126,13 @@
                         padding-right: 5px;
                         width: 35px;
                     }
+                }
+
+                span{
+                    display: flex;
+                    font-weight: 700;
+                    justify-content: center;
+                    align-items: center;
                 }
             }
             &-forgot{
